-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.0
-
None
-
17d654536d544f33bf1e588d3702cdc95de7841e
QOAuth2AuthorizationCodeFlow::refreshAccessToken() makes a request to refresh the access token, but doesn't really do anything with the result. The reply handler is called, but that's it - the resulting token is never saved. The status never advances from Status::RefreshingToken. This makes refreshing token non-functional.
For Gerrit Dashboard: QTBUG-65778 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
217194,17 | Fix refresh token workflow | 5.11 | qt/qtnetworkauth | Status: MERGED | -2 | 0 |