Fix refresh token workflow

The workflow for refresh token was not working properly due to a
missing QObject::connect(). Getting the access token and refreshing it
later was working, but only because the connection was done in
QOAuth2AuthorizationCodeFlow::requestAccessToken().
The patch adds a couple of tests to check both workflows.

Task-number: QTBUG-65778
Change-Id: Id89f2e9f64d5285fc6cd24c9c4afd430b8925239
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Kamil Rojewski <kamil.rojewski@gmail.com>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>